--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.3
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.8.1
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
