--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.3.4
   firebase_core: ^3.8.1
   fluttertoast: ^8.2.8
+  google_gemini: ^0.1.2
 
 dev_dependencies:
   flutter_test:
