--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.8.1
   fluttertoast: ^8.2.8
   google_gemini: ^0.1.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
