--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_gemini: ^0.1.2
   image_picker: ^1.1.2
   provider: ^6.1.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
