--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  shared_preferences: ^2.3.3
-  cloud_firestore: ^5.5.1
-  firebase_auth: ^5.3.4
-  firebase_core: ^3.8.1
-  fluttertoast: ^8.2.8
+  firebase_auth: ^5.4.2
+  firebase_core: ^3.11.0
+  cloud_firestore: ^5.6.3
+  shared_preferences: ^2.5.1
   google_gemini: ^0.1.2
-  image_picker: ^1.1.2
-  provider: ^6.1.2
   google_sign_in: ^6.2.2
+  lottie: ^3.2.0
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
