--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.2
   lottie: ^3.2.0
   connectivity_plus: ^6.1.3
+  google_mobile_ads: ^5.3.1
   
 dev_dependencies:
   flutter_test:
